--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,12 @@ dependencies:
     sdk: flutter         
   intl: ^0.17.0 
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  ## app routing
   go_router: ^5.0.1
+
+  ## state_management
+  riverpod: ^1.0.3+1
+  flutter_riverpod: ^1.0.3+1
 
 dev_dependencies:
   flutter_test:
