--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   ## state_management
   riverpod: ^1.0.3+1
   flutter_riverpod: ^1.0.3+1
+
+  ## formatter for phone number
   mask_text_input_formatter: ^2.4.0
 
 dev_dependencies:
